WIP-fix the openstreet map api and refactored timezone code